--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   <li>Cheese and crackers</li>
 </ul>
   <!-- Write your HTML in this file -->
-
+<h3>Ultimate Grilled Cheese</h3>
+<ol>
+  <li>Heat frying pan at medium heat and add butter</li>
+  <li>Butter two slices in frying pan and fry for 1 minute</li>
+  <li>Place bread slices in frying pan and fry for 1 minute</li>
+  
+  
+  
+  
+  
+</ol>
 </body>
 </html>
